@@ -11,7 +11,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -31,7 +30,7 @@ public class UserService implements IUserService {
     public User getUserProfile(String email) {
         User user = userRepository.findByEmail(email);
         if (user == null) {
-            throw new HttpException("User does not exist", HttpStatus.NOT_FOUND);
+            throw new HttpException("No user profile found", HttpStatus.NOT_FOUND);
         }
         user.setPassword(null);
         return user;
@@ -52,7 +51,7 @@ public class UserService implements IUserService {
                 .getContent();
 
         return users.stream().map(this::convertToDto)
-                .collect(Collectors.toList());
+                    .toList();
 
     }
 
